--- a/sbin/newfs/newfs.8
+++ b/sbin/newfs/newfs.8
@@ -29,23 +29,23 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)newfs.8	6.10 (Berkeley) 3/16/91
+.\"     from: @(#)newfs.8	6.10 (Berkeley) 3/16/91
 .\"
-.\"	$Header: /cvsroot/src/sbin/newfs/newfs.8,v 1.3 1993/03/23 00:29:22 cgd Exp $
+.\"	$Id: newfs.8,v 1.3.2.1 1993/07/20 00:01:21 cgd Exp $
 .\"
 .Dd March 16, 1991
 .Dt NEWFS 8
 .Os BSD 4.2
 .Sh NAME
 .Nm newfs ,
-.Nm mfs
+.Nm mount_mfs
 .Nd construct a new file system
 .Sh SYNOPSIS
 .Nm newfs
 .Op Fl N
 .Op Ar newfs-options
 .Ar special
-.Nm mfs
+.Nm mount_mfs
 .Op Fl F Ar mount_flags
 .Op Ar newfs-options
 .Ar special node
@@ -57,7 +57,7 @@ program.
 Before running 
 .Nm newfs
 or
-.Nm mfs ,
+.Nm mount_mfs ,
 the disk must be labeled using 
 .Xr disklabel 8 .
 .Nm Newfs
@@ -74,13 +74,13 @@ on a specified node.
 exits and the contents of the file system are lost
 when the file system is unmounted.
 If
-.Nm mfs
+.Nm mount_mfs
 is sent a signal while running,
 for example during system shutdown,
 it will attempt to unmount its
 corresponding file system.
 The parameters to
-.Nm mfs
+.Nm mount_mfs
 are the same as those to
 .Nm newfs .
 The special file is only used to read the disk label which provides
@@ -207,13 +207,13 @@ relative to sector 0 on track N-1 on the same cylinder.
 .Pp
 .El
 The following option applies only to
-.Nm mfs .
+.Nm mount_mfs .
 .Bl -tag -width Fl
 .It Fl F Ar mount flags
 Used to pass in a decimal numeric value to be passed
 as mount flags when running as a memory based file system.
 This option is primarily intended for use when
-.Nm mfs
+.Nm mount_mfs
 is started by the
 .Xr mount 8
 command.
