--- a/sbin/mount/mount.8
+++ b/sbin/mount/mount.8
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)mount.8	6.17 (Berkeley) 8/5/91
 .\"
-.\"	$Header: /cvsroot/src/sbin/mount/mount.8,v 1.3 1993/03/23 00:28:50 cgd Exp $
+.\"	$Id: mount.8,v 1.3.2.1 1993/07/20 00:58:14 cgd Exp $
 .\"
 .Dd August 5, 1991
 .Dt MOUNT 8
@@ -294,7 +294,8 @@ file system table
 .Sh SEE ALSO
 .Xr mount 2 ,
 .Xr unmount 2 ,
-.Xr fstab 5
+.Xr fstab 5 ,
+.Xr mount_XXX 8
 .Sh BUGS
 It is possible for a corrupted file system to cause a crash.
 .Sh HISTORY
